fit_predictor/mkp_aco/evaluates/run12/2025-01-26_13-29-34/problem_iter31_response9.txt_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 97
    return heuristic
    ^
IndentationError: expected an indented block after 'for' statement on line 93
